objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Enter a Description/ Text Body for the Article</description>
        <inlineHelpText>Enter a Description/ Text Body for the Article</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RTC_Article_URL__c</fullName>
        <label>Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RTC_Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>Knowledge_Article</fullName>
        <active>true</active>
        <description>Used for general knowledge Articles</description>
        <label>Knowledge Article</label>
    </recordTypes>
</CustomObject>